# challange_poetry_personal_finances

./: README.md  pyproject.toml
data/: despesas_limpo  despesas_pessoais.csv
src/challange_poetry_personal_finance/: main.py
