[project]
name = "challange-poetry-personal-finance"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio Vuono",email = "antoniosvuono@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "challange_poetry_personal_finance", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
